--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
@@ -11,4 +11,6 @@
     <string name="login_failed">"Login failed"</string>
     <string name="create_grocerylist_name">Name</string>
     <string name="create_grocerylist_save">Save</string>
+    <string name="activity_registration_register">Register</string>
+    <string name="activity_login_register">Register?</string>
 </resources>
