Adds a bottom navitation bar which allows to switch between lists and invitations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="create_grocerylist_save">Save</string>
     <string name="activity_registration_register">Register</string>
     <string name="activity_login_register">Register?</string>
+    <string name="navigation_lists">Lists</string>
+    <string name="navigation_invitations">Invitations</string>
 </resources>
