--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,17 +5,13 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="create_grocerylist_name">Name</string>
     <string name="create_grocerylist_save">Save</string>
     <string name="activity_registration_register">Register</string>
-    <string name="activity_login_register">Register?</string>
     <string name="navigation_lists">Lists</string>
     <string name="navigation_invitations">Invitations</string>
     <string name="create_invitation">Invite email</string>
-    <string name="prompt_lastname">lastname</string>
-    <string name="prompt_firstname">firstname</string>
+    <string name="prompt_lastname">Lastname</string>
+    <string name="prompt_firstname">Firstname</string>
 </resources>
