--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="prompt_firstname">Firstname</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="archived_navigation_lists">Archive</string>
 </resources>
