--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="archived_navigation_lists">Archive</string>
+    <string name="default_channel_name">Default channel for information notification</string>
+    <string name="default_channel_description">Groups notifications for informations with default importance</string>
 </resources>
