--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
+    <string name="change_password">Change password</string>
+    <string name="new_password">New Password</string>
+    <string name="old_password">Old password</string>
 </resources>
