--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -25,9 +25,16 @@
     <string name="new_password">Neues Passwort</string>
     <string name="old_password">Altes Passwort</string>
     <string name="quantity">Menge</string>
-    <string name="piece">St.</string>
-    <string name="liter">l</string>
-    <string name="milli_liter">ml</string>
-    <string name="gram">g</string>
-    <string name="kilo_gram">kg</string>
+    <string name="piece">Stück</string>
+    <string name="liter">Liter</string>
+    <string name="milli_liter">Milli-Liter</string>
+    <string name="gram">Gram</string>
+    <string name="kilo_gram">Kilogram</string>
+    <string name="dialog_title_grocery_list_entry_create">Eintrag anlegen</string>
+    <string name="dialog_title_grocery_list_entry_update">Eintrag bearbeiten</string>
+    <string name="dialog_title_grocery_list_create">Liste anlegen</string>
+    <string name="dialog_title_grocery_list_update">Liste bearbeiten</string>
+    <string name="dialog_title_change_password">Passwort ändern</string>
+    <string name="dialog_title_forgot_password">Passwort zurücksetzen</string>
+    <string name="prompt_password_again">Passwort wiederholen</string>
 </resources>
