moar quantity stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,16 @@
     <string name="new_password">New Password</string>
     <string name="old_password">Old password</string>
     <string name="quantity">Amount</string>
-    <string name="piece">piece</string>
-    <string name="liter">liter</string>
-    <string name="milli_liter">milli-liter</string>
-    <string name="gram">gram</string>
-    <string name="kilo_gram">kilo-gram</string>
+    <string name="QuantityUnit.P">piece</string>
+    <string name="QuantityUnit.L">liter</string>
+    <string name="QuantityUnit.ML">milli-liter</string>
+    <string name="QuantityUnit.G">gram</string>
+    <string name="QuantityUnit.KG">kilo-gram</string>
+    <string name="QuantityUnit.P.short">pc</string>
+    <string name="QuantityUnit.L.short">l</string>
+    <string name="QuantityUnit.ML.short">ml</string>
+    <string name="QuantityUnit.G.short">g</string>
+    <string name="QuantityUnit.KG.short">kg</string>
     <string name="dialog_title_grocery_list_entry_create">Create entry</string>
     <string name="dialog_title_grocery_list_entry_update">Update entry</string>
     <string name="dialog_title_grocery_list_create">Create list</string>
