--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -25,11 +25,16 @@
     <string name="new_password">Neues Passwort</string>
     <string name="old_password">Altes Passwort</string>
     <string name="quantity">Menge</string>
-    <string name="piece">Stück</string>
-    <string name="liter">Liter</string>
-    <string name="milli_liter">Milli-Liter</string>
-    <string name="gram">Gram</string>
-    <string name="kilo_gram">Kilogram</string>
+    <string name="QuantityUnit.P">Stück</string>
+    <string name="QuantityUnit.L">Liter</string>
+    <string name="QuantityUnit.ML">Milliliter</string>
+    <string name="QuantityUnit.G">Gramm</string>
+    <string name="QuantityUnit.KG">Kilogramm</string>
+    <string name="QuantityUnit.P.short">St.</string>
+    <string name="QuantityUnit.L.short">l</string>
+    <string name="QuantityUnit.ML.short">ml</string>
+    <string name="QuantityUnit.G.short">g</string>
+    <string name="QuantityUnit.KG.short">kg</string>
     <string name="dialog_title_grocery_list_entry_create">Eintrag anlegen</string>
     <string name="dialog_title_grocery_list_entry_update">Eintrag bearbeiten</string>
     <string name="dialog_title_grocery_list_create">Liste anlegen</string>
