--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="dialog_title_change_password">Change password</string>
     <string name="dialog_title_forgot_password">Reset password</string>
     <string name="prompt_password_again">Repeat password</string>
+    <string name="dialog_title_invitation">Invite</string>
 </resources>
