--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,12 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="login_failed">"Login failed"</string>
     <string name="create_grocerylist_name">Name</string>
     <string name="create_grocerylist_save">Save</string>
     <string name="activity_registration_register">Register</string>
     <string name="navigation_lists">Lists</string>
     <string name="navigation_invitations">Invitations</string>
-    <string name="create_invitation">Invite email</string>
+    <string name="create_invitation">Email</string>
     <string name="prompt_lastname">Lastname</string>
     <string name="prompt_firstname">Firstname</string>
     <string name="save">Save</string>
@@ -25,4 +24,23 @@
     <string name="change_password">Change password</string>
     <string name="new_password">New Password</string>
     <string name="old_password">Old password</string>
+    <string name="quantity">Amount</string>
+    <string name="QuantityUnit.P">piece</string>
+    <string name="QuantityUnit.L">liter</string>
+    <string name="QuantityUnit.ML">milli-liter</string>
+    <string name="QuantityUnit.G">gram</string>
+    <string name="QuantityUnit.KG">kilo-gram</string>
+    <string name="QuantityUnit.P.short">pc</string>
+    <string name="QuantityUnit.L.short">l</string>
+    <string name="QuantityUnit.ML.short">ml</string>
+    <string name="QuantityUnit.G.short">g</string>
+    <string name="QuantityUnit.KG.short">kg</string>
+    <string name="dialog_title_grocery_list_entry_create">Create entry</string>
+    <string name="dialog_title_grocery_list_entry_update">Update entry</string>
+    <string name="dialog_title_grocery_list_create">Create list</string>
+    <string name="dialog_title_grocery_list_update">Update entry</string>
+    <string name="dialog_title_change_password">Change password</string>
+    <string name="dialog_title_forgot_password">Reset password</string>
+    <string name="prompt_password_again">Repeat password</string>
+    <string name="dialog_title_invitation">Invite</string>
 </resources>
