--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -43,4 +43,5 @@
     <string name="dialog_title_forgot_password">Passwort zurücksetzen</string>
     <string name="prompt_password_again">Passwort wiederholen</string>
     <string name="dialog_title_invitation">Einladen</string>
+    <string name="new_chip">Neu</string>
 </resources>
