--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="prompt_password_again">Repeat password</string>
     <string name="dialog_title_invitation">Invite</string>
     <string name="new_chip">New</string>
+    <string name="loading_failed">Reload failed</string>
 </resources>
