--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -45,4 +45,5 @@
     <string name="dialog_title_invitation">Einladen</string>
     <string name="new_chip">Neu</string>
     <string name="loading_failed">Laden fehlgeschlagen</string>
+    <string name="login_failed">Login fehlgeschlagen</string>
 </resources>
