--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="dialog_title_invitation">Invite</string>
     <string name="new_chip">New</string>
     <string name="loading_failed">Reload failed</string>
+    <string name="login_failed">Login failed</string>
 </resources>
